<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ORB_SLAM3_ROS2</name>
  <version>1.0.0</version>
  <description> ORB_SLAM3_ROS2 </description>
  <maintainer email="shintaro.sakoda@tier4.jp">Shintaro SAKODA</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>